css/main.css
/* ===== BASIC STYLES ===== */
html, body {
  background-color: #f8f8f8;
  color:#666666;
  height: 100%;
  font-family: "museo-sans", Helvetica, Arial, sans-serif;

  /* Style Scrollbar in IE */
/*  scrollbar-arrow-color: #666;
  scrollbar-base-color: #ccc;
  scrollbar-track-color: #f8f8f8;
  scrollbar-face-color: #ccc;
  scrollbar-highlight-color: #ccc;
  scrollbar-3dlight-color: #ccc;
  scrollbar-darkshadow-color: #f8f8f8;
  scrollbar-shadow-color: #ccc;*/
}



/*Style Scrollbar in Chrome, Safari, Opera, Android, and iOS*/
::-webkit-scrollbar {
  height:10px;
  width:10px;
  background-color: #f8f8f8;
}
::-webkit-scrollbar-button {
  height:0;
  width:0;
}
::-webkit-scrollbar-thumb {
  background-color: #ccc;
  border:5px solid transparent;
  max-height:10px;
  max-width:10px;
  height:5px;
  width:5px;
}
::-webkit-scrollbar:hover,::-webkit-scrollbar:active  {
  -webkit-box-shadow: inset 6px 6px 4px -5px rgba(50, 50, 50, 0.3);
  -moz-box-shadow:    inset 6px 6px 4px -5px rgba(50, 50, 50, 0.3);
  box-shadow:         inset 6px 6px 4px -5px rgba(50, 50, 50, 0.3);
}
::-webkit-scrollbar-thumb:hover, ::-webkit-scrollbar-thumb:active {
  background-color:rgba(0,0,0,.4);
}

#results{ font-size: 16px;}

#ss-warning { font-size: 14px; }


/* ===== FORM GHOST TEXT ===== */
.form-control::-webkit-input-placeholder { color: #ccc; }
.form-control:-moz-placeholder { color: #ccc; } /* Firefox 18- */
.form-control::-moz-placeholder { color: #ccc;  } /* Firefox 19+ */
.form-control:-ms-input-placeholder { color: #ccc;  }

/* ===== NAVBAR ===== */
.sitename {
  color: white;
  font-size: 2em;
  font-weight: 400;
  text-shadow:none;
  font-family: "coquette", Helvetica;
  margin-left: auto;
  margin-right: auto;

  float: none;
}
.navbar {
  background-color: #f59000;
  padding-bottom: 1em;
  padding-top: 1em;
  margin-bottom:0;
  border-radius: 0;
}
.navbar a:hover { 
  color:#fff; 
}
.navbar-toggle {
  border-color: white;
}
.navbar-form .form-control {
  border-color:#ce7000;
}
.icon-bar {
  background-color: white;
}
.navbar-brand {
position: absolute;
width: 100%;
left: 0;
text-align: center;
margin-left: auto;
margin-right: auto;
}
.navbar{ 
height:80px;

}


/* ===== FEEDBACK BUTON ===== */
#feedback { 
  width: 104px; 
  position: fixed; 
  bottom: 0; 
  right: 5%;
  z-index: 999;
}

#feedback:hover {
  cursor: pointer;
}

#feedback a { 
  display: block; 
  background: #0094dc; 
  height: 2em; 
  width: 6em; 
  padding: 8px 16px;
  color: #fff; 
  font-size: 17px; 
  font-weight: bold; 
  text-decoration: none; 
  text-align: center;
  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .3) ;
  -moz-box-shadow:    0px 2px 2px 0px rgba(0, 0, 0, .3) ;
  box-shadow:         0px 2px 2px 0px rgba(0, 0, 0, .3) ;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;

  /*border-bottom: solid 1px #333;*/
  /*border-left: solid 1px #333;*/
  /*border-right: solid 1px #fff;*/
}

#feedback a:hover { 
    background-color: #0077a0;
  border-color: #0077a0;
}

/* ===== REMINDERS ===== */
.reminderSignup {
  margin-top: 2em;
}
.reminderText {
  max-width: 250px;
  display: inline-block;
}
.reminderIcon {
  margin-right: 2em;
  float:left;
}
input#email, input#sms { 
  width: 16em;
}
.notations {
  font-size: .8em;
  margin-top: 3em;
  margin-bottom: 2em;
}



/* ===== PRINTABLE SCHEDULE ===== */
.print-schedule { 
  margin-top: 4em; 
}
.print-schedule>.table>tbody>tr>td>.panel {
  margin-bottom: 0em;
  border: 1px solid #e8e8e8;
  -webkit-box-shadow:none;
  box-shadow: none;
}
.print-schedule>.table>tbody>tr>td>.panel>.panel-heading {
  border-bottom: none;
}

/* ===== TABLE ===== */
.table-curved {
    border-collapse: separate;
    background-color: white;
}
.table-curved {
    border: solid #ddd 1px;
    border-radius: 3px;
    border-left:none;
    border-top:none;
}
.table-curved td:first-child, .table-curved th:first-child {
    border-left: 1px solid #ddd;
    border-top: 1px solid #ddd;
}
.table-curved th {
    border-top: none;
    background-color: #f9f9f9;
}
.table-curved th:first-child {
    border-radius: 3px 0 0 0;
}
.table-curved th:last-child {
    border-radius: 0 3px 0 0;
}
.table-curved th:only-child{
    border-radius: 3px 3px 0 0;
}
.table-curved tr:last-child td:first-child {
    border-radius: 0 0 0 3px;
}
.table-curved tr:last-child td:last-child {
    border-radius: 0 0 3px 0;
}
/*.table-curved tr td:last-child {
  color: #b3b3b3;
}*/
.table-responsive {
  border:none;
}


/* ===== SPECIFIC STYLES ===== */
#save-calendar {
  padding-top:1em;
  padding-bottom:4em;
}
#ss-next {
 padding-top:3em; 
}

/* ===== REUSABLE STYLES ===== */
.section-title {
  font-weight: 700;
  color: #f59000;
  text-transform: uppercase;
  padding-top: 1em;
  padding-bottom: 1em;
  font-size: 1em;
}
hr {
  border-top: 1px solid #e6e6e6;
  margin-top: 3em; 
  margin-bottom: 1em; 
}
.footnotes {
  margin-top: 3em;
  font-size: 14px;
}






/* ===== BIG SEARCH BAR ===== */
.sched-descr {
  margin-top: 5em;
  margin-bottom: 2.5em;
}
.bigSearch-container > .form > .form-group { padding-left: 0;}
.bigSearch-container { margin-top: 4em; }
.bigSearch-input {
  height: 4em;
  font-size: 1.2em;
  padding-left: 1.5em;
  margin-left: 0;
}
.bigSearch-submit, .bigSearch-submit:focus {
  background-color: #0095D9;
  font-size: 1em; 
  color:white;
  border:none;
  box-shadow: 0 0 1px #666;
  height: 4.8em;
  max-height: 4.8em;
}
.bigSearch-submit:hover {
  background-color:#0095D9;
  color:white;
  box-shadow: none;
}
#search-example {
  font-size: 16px;
}

/* ===== NEXT EVENT CALLOUT ===== */
.highlight {
  display: inline;
  border-bottom: 4px solid #fcddb2;
}



/* ===== BUTTONS ===== */
.btn {
  box-shadow: rgba(0, 0, 0, .3) 0px 2px 2px 0px;
}
.btn:hover {
  box-shadow:none;
  background-color: #e8e8e8;
  border: 1px solid #999;
  -o-transition:.3s;
  -ms-transition:.3s;
  -moz-transition:.3s;
  -webkit-transition:.3s;
  transition:.3s;
}
.grey-btn {
  background-color: #fbfbfb;
  color: #808080;
  border:1px solid #ccc;
  min-width: 5em;
}
.blue-btn, .blue-btn:focus {
  background-color: #0095D9;
  color: white;
}
.blue-btn:hover {
  color:white;
  background-color: #0077a0;
  border-color: #0077a0;
}
.btn-text {
  padding-left: .5em;
}



/* ===== FOOTER ===== */
footer {
  color:#666666;
  background-color: #f8f8f8;
  font-size: 1em;
  /*border-top:1px solid #ddd;*/
}
footer a {color:#f59000;}
footer a:hover {
  color:#f59000; 
  text-decoration: underline;
}
.footer-content {
  padding-top: 2em;
  padding-bottom: 2em;
  text-align: center;
  text-shadow:none;
}



/* ===== MODAL STYLES ===== */
.modal-content {
  background-color: #f8f8f8;
}
#popup-content {  margin-bottom: 2em; }
.modal-footer > button 
#popup-content > h3 {
  margin-top: .5em;
}
.modal-title {
  color: #f59000;
  text-transform: uppercase;
  font-size: 1em;
  font-weight: 700;
}

.modal-half {
  width: 55%;
  float: left;
  padding-right: 2em;
}
.modal-map {
  float: right;
  margin-top: 1em;
  height: 290px;
  border: 1px solid #ccc;
  border-radius: 3px;
}

/* ===== MEDIA QUERIES ===== */

@media (min-width: 1201px){}
@media (max-width: 1200px) and (min-width:992px){
    input#email, input#sms {
      margin-top: 1em;
   }
   .reminderInput button {
    margin-top: 1em;
   }
   .reminderText {
    max-width: 1000px;
   }
}
@media (max-width: 991px) and (min-width:768px){
  .bigSearch-submit {
    font-size: 1em;
    height: 6em;
  }
      input#email, input#sms {
      margin-top: 1em;
   }
   .reminderInput button {
    margin-top: 1em;
   }
   .reminderText {
    max-width: 1000px;
   }
}
@media (max-width: 767px){
  .bigSearch-container { margin-top: 4em; }
  .bigSearch-input {
    font-size: 1em;
    width: 120%;
  }
  .bigSearch-submit {
    font-size: 1em;
    width: 100%;}
  .bigSearch-container > .form > .form-group {
    max-width: 100%;
    padding-right: 0;
  }
  input#email, input#sms {
    margin-top: 1em;
    margin-left: 4.3em;
    width: 75%;
  }
  button.reminderButton { margin-left: 4.3em;}
  .mobile-btn {
    width:100%;
    margin-top: 1em;
    margin-left:0;
    max-width:100%;
    height: 48px;
  }
  .sitename {
    font-size: 1.5em;
  }
  .navbar-form {
    margin-top:0;
  }
}

